--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect Page</title>
+    <title>Redirect to Mainstreet</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        p {
+            text-align: center;
+        }
+    </style>
     <script>
         // Function to extract the code parameter from the URL
         function getCodeFromURL() {
@@ -28,7 +41,7 @@
     </script>
 </head>
 <body>
-    <!-- You can add any loading indicator or message here -->
+    <!-- Redirecting message -->
     <p>Redirecting to Mainstreet, please wait...</p>
 </body>
 </html>
